fixing table wrapping issue

--- a/source/styles/elements/_tables.scss
+++ b/source/styles/elements/_tables.scss
@@ -12,7 +12,3 @@
     }
   }
 }
-
-.table-collapse-xs strong {
-  white-space: nowrap;
-}
