--- a/source/styles/elements/_utilities.scss
+++ b/source/styles/elements/_utilities.scss
@@ -28,3 +28,7 @@ $utility-gutter-width: ($grid-gutter-width / 2) !default;
 .u-margin-left {
   margin-left: $utility-gutter-width;
 }
+
+.u-nowrap {
+  white-space: nowrap;
+}
